objects/InvolvedOrganizationStakeholder__c.object
<CustomObject>
    <fields>
        <fullName>Involved_Organization__c</fullName>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>InvolvedOrganization__c.Organization__r.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>InvolvedOrganization__c</referenceTo>
        <relationshipLabel>Involved Organization Stakeholders</relationshipLabel>
        <relationshipName>Involved_Organization_Stakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Involved_Organization__r.Organization__r.Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_ParentEntity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country President</fullName>
                </value>
                <value>
                    <fullName>GSA Zone CS&amp;Q Manager of leading Business</fullName>
                </value>
                <value>
                    <fullName>GSA CS&amp;Q Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager / KAM / GAM</fullName>
                </value>
                <value>
                    <fullName>I2P Process Advocate</fullName>
                </value>
                <value>
                    <fullName>CS&amp;Q Manager</fullName>
                </value>
                <value>
                    <fullName>BRE Informed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_UniqueField__c</fullName>
        <label>TECH_UniqueField</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Involved_Organization_Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Involved Organization Stakeholder</label>
    <nameField>
        <displayFormat>IOS{0000}</displayFormat>
        <label>Involved Organization Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involved Organization Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>